--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,8 +1,35 @@
-{% if not searchPage %}
-{% include 'head.html' %}
-<!-- HEAD (but when we load show.html from searchpage we don't want it -->
-<!-- no indentation here to remove whitespace -->
-{% endif %}
+{%- if not searchPage -%}
+  {# HEAD (but when we load show.html from searchpage we don't want it #}
+  {%- include 'head.html' -%}
+  {# TITLE #}
+  {%- block title -%}
+    {# this can be overriden by child templates #}
+    <h1 id='pageTitle' {%- if hideTitle -%}hidden{%endif%}>{{ App.pageTitle }}</h1>
+  {%- endblock -%}
+
+
+  {# INFO BOX (FLASH MESSAGES) #}
+  {%- for ok in App.ok -%}
+    {{ ok|msg('ok') }}
+  {%- endfor -%}
+  {%- for ko in App.ko -%}
+    {{ ko|msg('ko') }}
+  {%- endfor -%}
+  {%- for warning in App.warning -%}
+    {{ warning|msg('warning') }}
+  {%- endfor -%}
+  {# ANNOUNCEMENTS #}
+  {# general sysconfig announcement #}
+  {%- if App.Config.configArr.announcement -%}
+    {{ App.Config.configArr.announcement|msg('warning') }}
+  {%- endif -%}
+
+  {# team level announcement #}
+  {%- if App.teamArr.announcement -%}
+    {{ App.teamArr.announcement|msg('warning') }}
+  {%- endif -%}
+  <div id='output'></div>
+{%- endif -%}
 
 <!-- BODY -->
 {% block body %}{% endblock %}
