--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -21,7 +21,7 @@
   <link rel="icon" href="app/img/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="app/img/apple-touch-icon.png"><!-- 180×180 -->
 
-  <title>{{ block('title') }} - eLabFTW</title>
+  <title>{{ App.pageTitle }} - eLabFTW</title>
   <!-- load open vector editor -->
   <link rel='stylesheet' type='text/css' href='assets/ove/main.css?v={{ v }}'>
   <script defer src='assets/ove/open-vector-editor.min.js?v={{ v }}'></script>
@@ -60,29 +60,30 @@
     <!-- logo -->
     <a href='index.php'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.png' width='110' height='40' alt='elabftw' /></a>
 
+    {% set scriptName = App.Request.getScriptName|split('/')|last %}
     {% if App.Session.has('is_auth') %}
     <!-- everything in there will be part of the burger -->
     <div class='collapse navbar-collapse' id='main-nav'>
         <div class='navbar-nav'>
-            <a class='nav-item nav-link {{ App.Request.getScriptName|split('/')|last == 'experiments.php' ? 'active' }}'
+            <a class='nav-item nav-link {{ scriptName == 'experiments.php' ? 'active' }}'
                 href='experiments.php'>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</a>
-            <a class='nav-item nav-link {{ App.Request.getScriptName|split('/')|last == 'database.php' ? 'active' }}'
+            <a class='nav-item nav-link {{ scriptName == 'database.php' ? 'active' }}'
                 href='database.php'>{{ 'Database'|trans }}</a>
 
             {% if not App.Session.has('is_anon') %}
-            <a class='nav-item nav-link {{ App.Request.getScriptName|split('/')|last == 'team.php' ? 'active' }}'
+            <a class='nav-item nav-link {{ scriptName == 'team.php' ? 'active' }}'
                 href='team.php'>{{ 'Team'|trans }}</a>
             {% endif %}
 
-            <a class='nav-item nav-link {{ App.Request.getScriptName|split('/')|last == 'search.php' ? 'active' }}'
+            <a class='nav-item nav-link {{ scriptName == 'search.php' ? 'active' }}'
                 href='search.php'>{{ 'Search'|trans }}</a>
             <a class='nav-item nav-link' href='{{ App.teamArr.link_href }}' target='_blank' rel='noopener'>{{ App.teamArr.link_name }}</a>
 
         </div>
 
         <!-- SEARCH BAR -->
-        <form class='nav-item form-inline ml-auto' method='get' action='{{ App.Request.getScriptName }}'>
-            {% if App.Request.getScriptName|split('/')|last == 'experiments.php' or App.Request.getScriptName|split('/')|last == 'database.php' %}
+        <form class='nav-item form-inline ml-auto' method='get' action='{{ scriptName }}'>
+            {% if scriptName == 'experiments.php' or scriptName == 'database.php' %}
             <input class='form-control big-search' type='search' name='q' aria-label='Search' size='20' value='{{ App.Request.query.get('q') }}' />
             {% endif %}
         </form>
@@ -153,14 +154,14 @@
 </nav>
 
 <!-- SHOW FAVTAGS PANEL -->
-<div class='pr-2 mt-3 float-left'>
-  <div id='favtags-opener' hidden>
-    <div class='bound-right sidepanel-btn sidepanel-closed' id='favtagsPanelOpener' data-action='toggle-favtags' title='{{ 'Toggle favorite tags'|trans }}'>
+<div class='pr-2 mt-3 float-left' id='sidepanel-buttons' hidden>
+  <div id='favtags-opener'>
+    <div class='bounce-right sidepanel-btn sidepanel-closed' id='favtagsPanelOpener' data-action='toggle-favtags' title='{{ 'Toggle favorite tags'|trans }}'>
       <i class='fas fa-folder-tree'></i>
     </div>
   </div>
   <!-- SHOW TODOLIST PANEL -->
-  <div class='mt-3' id='todolist-opener' hidden>
+  <div class='mt-3' id='todolist-opener'>
     <div class='bounce-right sidepanel-btn sidepanel-closed' id='todolistPanelOpener' data-action='toggle-todolist' title='{{ 'Toggle todolist'|trans }}'>
       <i class='fas fa-list-check'></i>
     </div>
@@ -224,28 +225,3 @@
     </div>
   </div>
 </div>
-<!-- TITLE -->
-<!-- login and register pages will have this title hidden -->
-<h1 id='pageTitle' {% if hideTitle %}hidden{%endif%}>{% block title %}{{ App.pageTitle }}{% endblock %}</h1>
-
-<!-- INFO BOX (FLASH MESSAGES) -->
-{% for ok in App.ok %}
-  {{ ok|msg('ok') }}
-{% endfor %}
-{% for ko in App.ko %}
-  {{ ko|msg('ko') }}
-{% endfor %}
-{% for warning in App.warning %}
-  {{ warning|msg('warning') }}
-{% endfor %}
-<!-- ANNOUNCEMENTS -->
-{# general sysconfig announcement #}
-{% if App.Config.configArr.announcement %}
-  {{ App.Config.configArr.announcement|msg('warning') }}
-{% endif %}
-
-{# team level announcement #}
-{% if App.teamArr.announcement %}
-  {{ App.teamArr.announcement|msg('warning') }}
-{% endif %}
-<div id='output'></div>
