--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -50,7 +50,7 @@
                 <input type='text' class='form-control mb-1 newFieldOption' autocomplete='off'>
                 <input type='text' class='form-control mb-1 newFieldOption' autocomplete='off'>
               </div>
-              <button type='button' class='btn btn-secondary button-small' data-action='new-field-add-option'>{{ 'Add another choice'|trans }}</button>
+              <button type='button' class='btn btn-secondary btn-sm' data-action='new-field-add-option'>{{ 'Add another choice'|trans }}</button>
               <!-- this is only shown for select type -->
               <div id='newFieldContentDiv_select' hidden>
                 <hr>
