--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -1,17 +1,27 @@
 {% extends 'base.html' %}
 
+{% block title %}
+<div class='d-flex align-content-center'>
+  <h1 id='pageTitle' {% if hideTitle %}hidden{%endif%}>{{ App.pageTitle }}</h1>
+  {% if not searchPage %}
+    <div class='ml-auto'>
+      {% include 'create-new.html' %}
+    </div>
+  {% endif %}
+</div>
+{% endblock %}
+
 {% block body %}
 
   {% if not searchPage %}
     {% include 'show-view-edit.html' %}
   {% endif %}
-  {% include 'filter-order-sort.html' %}
 
   <hr>
-  <div class='d-flex'>
+  <div class='d-flex align-items-center'>
     <p class='smallgray mr-auto'>
-      <a href='#' data-action='expand-all-entities' data-status='closed' data-expand='{{ 'Expand all'|trans }}' data-collapse='{{ 'Collapse all'|trans }}'>{{ 'Expand all'|trans }}</a>
-      - <a href='#' data-action='select-all-entities'>{{ 'Select all'|trans }}</a>
+      <a href='#' class='color-medium' data-action='expand-all-entities' data-status='closed' data-expand='{{ 'Expand all'|trans }}' data-collapse='{{ 'Collapse all'|trans }}'>{{ 'Expand all'|trans }}</a>
+      - <a href='#' class='color-medium' data-action='select-all-entities'>{{ 'Select all'|trans }}</a>
       <span id='advancedSelectOptions' class='d-none'>
         - <a href='#' data-action='unselect-all-entities'>{{ 'Clear selection'|trans }}</a>
         - <a href='#' data-action='invert-entities-selection'>{{ 'Invert selection'|trans }}</a>
@@ -24,32 +34,107 @@
         <i class='fas fa-fw fa-table'></i>
       </div>
 
-      <!-- ORDER -->
-      <div class='form-group'>
-        <div class='btn-group'>
-          <button class='btn btn-secondary btn-sm dropdown-toggle' data-toggle="dropdown" aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Sort'|trans }}'>{{ 'Sort'|trans }}</button>
-          <div class='dropdown-menu dropdown-menu-right'>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='date-desc' href='#'>{{ 'Newest'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='date-asc' href='#'>{{ 'Oldest'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='lastchange-desc' href='#'>{{ 'Recently modified'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'asc')? 'active' }}' data-query='lastchange-asc' href='#'>{{ 'Least recently modified'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='cat-desc' href='#'>{{ 'Category'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='cat-asc' href='#'>{{ 'Category (inverted)'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='id-desc' href='#'>{{ 'Highest ID'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='id-asc' href='#'>{{ 'Lowest ID'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'comment' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='comment-desc' href='#'>{{ 'Recently commented'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='title-asc' href='#'>{{ 'Title (alphabetical)'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='title-desc' href='#'>{{ 'Title (inverted)'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='user-asc' href='#'>{{ 'User (alphabetical)'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='user-desc' href='#'>{{ 'User (inverted)'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='rating-desc' href='#'>{{ 'Highest rating'|trans }}</a>
-            <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='rating-asc' href='#'>{{ 'Lowest rating'|trans }}</a>
-          </div>
+      <div class='hl-hover-gray rounded p-1 align-self-baseline mr-1' data-action='toggle-items-layout'>
+      <button class='btn btn-secondary btn-sm' data-action='toggle-next' data-toggle-target='filtersDiv' aria-label='{{ 'Toggle filters'|trans }}'>
+        <i class='fas fa-filter fa-fw mr-1 color-white'></i>{{ 'Filters'|trans }}
+      </button>
+      </div>
+
+      {# ORDER (Sort) #}
+      <div class='btn-group'>
+        <button class='btn btn-secondary btn-sm dropdown-toggle' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Sort'|trans }}'><i class='fas fa-arrow-down-wide-short fa-fw mr-1 color-white'></i>{{ 'Sort'|trans }}</button>
+        <div class='dropdown-menu dropdown-menu-right'>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='date-desc' href='#'>{{ 'Newest'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'date' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='date-asc' href='#'>{{ 'Oldest'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='lastchange-desc' href='#'>{{ 'Recently modified'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'lastchange' and App.Request.query.get('sort') == 'asc')? 'active' }}' data-query='lastchange-asc' href='#'>{{ 'Least recently modified'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='cat-desc' href='#'>{{ 'Category'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'cat' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='cat-asc' href='#'>{{ 'Category (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='id-desc' href='#'>{{ 'Highest ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'id' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='id-asc' href='#'>{{ 'Lowest ID'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'comment' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='comment-desc' href='#'>{{ 'Recently commented'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='title-asc' href='#'>{{ 'Title (alphabetical)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'title' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='title-desc' href='#'>{{ 'Title (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='user-asc' href='#'>{{ 'User (alphabetical)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'user' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='user-desc' href='#'>{{ 'User (inverted)'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'desc') ? 'active' }}' data-query='rating-desc' href='#'>{{ 'Highest rating'|trans }}</a>
+          <a class='dropdown-item {{ (App.Request.query.get('order') == 'rating' and App.Request.query.get('sort') == 'asc') ? 'active' }}' data-query='rating-asc' href='#'>{{ 'Lowest rating'|trans }}</a>
         </div>
       </div>
     </div>
   </div>
 
+  <div hidden id='filtersDiv' data-save-hidden='filtersDiv'>
+    <div class='d-flex'>
+      {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
+      {# we hide this menu for small devices #}
+      <div class='d-none d-sm-block {{ searchPage ? 'mt-2' }}'>
+        <form>
+          <div class='form-group form-inline'>
+            {% if not searchPage %}
+              <input type='hidden' name='q' value='{{ DisplayParams.query }}' />
+            {% endif %}
+            {% if DisplayParams.searchType == 'related' %}
+              <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
+            {% endif %}
+
+            {# CATEGORY #}
+            <select name='cat' class='autosubmit mr-1 form-control' aria-label='Filter category'>
+              <option value=''>{{ Entity.type == 'experiments' ? 'Filter status'|trans : 'Filter by type'|trans }}</option>
+              {% for category in categoryArr %}
+                <option value='{{ category.category_id }}'{{ App.Request.query.get('cat') == category.category_id ? ' selected'}}>
+                {{ category.category|raw }}</option>
+              {% endfor %}
+            </select>
+
+            {# OWNER filter #}
+            <select name='owner' class='autosubmit mr-1 form-control' aria-label='Filter owner'>
+              <option value=''>{{ 'Filter owner'|trans }}</option>
+              {% for user in usersArr %}
+                <option value='{{ user.userid }}'{{ App.Request.query.get('owner') == user.userid ? ' selected'}}>
+                {{ user.fullname|raw }}</option>
+              {% endfor %}
+            </select>
+
+            {% if not searchPage %}
+              {# VISIBILITY filter #}
+              <select name='extended' class='autosubmit mr-1 form-control' aria-label='Filter visibility'>
+                <option value=''>{{ 'Filter visibility'|trans }}</option>
+                {% for vis in visibilityArr %}
+                <option value='visibility:"{{ vis }}"'{{ App.Request.query.get('extended') == 'visibility:"' ~ vis|raw ~ '"' ? ' selected'}}>
+                  {{ vis|raw }}</option>
+                {% endfor %}
+              </select>
+
+            {% endif %}
+            <input type='hidden' name='mode' value='show' />
+
+            {# LIMIT if there is nothing in the query params, take the user configured one #}
+            {% set thelimit = App.Request.query.get('limit') %}
+            {% if thelimit is empty %}
+              {% set thelimit = App.Users.userData.limit_nb %}
+            {% endif %}
+            <select autocomplete='off' name='limit' id='select-limit' class='autosubmit mr-1 form-control' aria-label='Number of results shown'>
+              <option value=''>{{ 'Results per page'|trans }}</option>
+              {% for option in limitOptions(DisplayParams.limit) %}
+                <option{{ option == thelimit ? ' selected' }} value='{{ option }}'>{{ option }}</option>
+              {% endfor %}
+            </select>
+
+            {# SEARCH WITH TAG #}
+            <select multiple name='tags[]' class='form-control mr-1 selectpicker' data-show-subtext='true' data-none-selected-text='{{ 'Tags'|trans }}' data-live-search='true' data-style='' data-style-base='form-control' data-showtick='true' data-actions-box='true'>
+              {% for tag in tagsArrForSelect %}
+                <option value='{{ tag.tag }}'{{ tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag|raw }}</option>
+              {% endfor %}
+            </select>
+            {# onBlur cannot work on bootstrap multiselect see https://stackoverflow.com/questions/42673800/bootstrap-multiselect-blur-event-not-triggering so add a button #}
+            <button class='btn btn-primary'>{{ 'Go'|trans }}</button>
+
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
   {% set count = itemsArr|length %}
 
