--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -6,6 +6,11 @@
       <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
     </div>
   </div>
+  {% if favTagsArr|length == 0 %}
+  <div class='p-2'>
+    <p>{{ 'No favorite tags are present. Start adding one by clicking the + button below and type a tag.'|trans }}</p>
+  </div>
+  {% endif %}
   <div class='d-flex flex-column'>
     {% for favtag in favTagsArr %}
     <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
@@ -18,7 +23,7 @@
     <input type='text' id='createFavTagInput' data-autocomplete='tags' class='form-control createFavTagInput' placeholder='{{ 'Start typing a tag'|trans }}' hidden />
   </div>
   <a data-action='toggle-addfav' href='#' title='{{ 'Add a tag as favorite'|trans }}'>
-    <i class='m-2 fas fa-plus-circle fa-2x'></i>
+    <i class='m-2 fas fa-square-plus fa-2x'></i>
   </a>
   <a data-action='toggle-favtags-edit' href='#' title='{{ 'Edit list'|trans }}'>
     <i class='m-2 fas fa-pencil-alt fa-2x'></i>
