--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,23 +1,19 @@
 <footer>
   <p class='footer-left'>
-    <a class='elab-tooltip-top' style='color:#343434' href='https://twitter.com/elabftw'>
-      <span>{{ 'Follow eLabFTW on Twitter!'|trans }}</span>
-        <i title='Twitter' class='fab fa-twitter fa-lg'></i>
+    <a title='{{ 'Follow eLabFTW on Twitter!'|trans }}' style='color:#343434' href='https://twitter.com/elabftw'>
+      <i title='Twitter' class='fab fa-twitter fa-lg'></i>
     </a>
 
-    <a class='elab-tooltip-top' style='color:#343434' href='https://github.com/elabftw/elabftw'>
-      <span>{{ 'Code repository on GitHub'|trans }}</span>
-        <i title='GitHub' class='fab fa-github fa-lg'></i>
+    <a title='{{ 'Code repository on GitHub'|trans }}' style='color:#343434' href='https://github.com/elabftw/elabftw'>
+      <i title='GitHub' class='fab fa-github fa-lg'></i>
     </a>
 
-    <a class='elab-tooltip-top' style='color:#343434' href='https://gitter.im/elabftw/elabftw'>
-      <span>{{ 'Join the discussion on Gitter'|trans }}</span>
-        <i title='Gitter' class='fas fa-comment-dots fa-lg'></i>
+    <a title='{{ 'Join the discussion on Gitter'|trans }}'style='color:#343434' href='https://gitter.im/elabftw/elabftw'>
+      <i title='Gitter' class='fas fa-comment-dots fa-lg'></i>
     </a>
 
-    <a class='elab-tooltip-top' data-action='report-bug' style='color:#343434' href='#'>
-      <span>{{ 'Submit feedback'|trans }}</span>
-        <i title='Report bug' class='fas fa-bug fa-lg'></i>
+    <a title='{{ 'Submit feedback'|trans }}' data-action='report-bug' style='color:#343434' href='#'>
+      <i title='Report bug' class='fas fa-bug fa-lg'></i>
     </a>
 
     <span>
