--- a/src/templates/favtags-panel.html
+++ b/src/templates/favtags-panel.html
@@ -6,26 +6,31 @@
       <button data-action='clear-favtags-search' class='btn btn-outline-secondary'><i class='fas fa-times fa-fw'></i></button>
     </div>
   </div>
+  <div class='px-2'>
+    <hr>
+  </div>
   {% if favTagsArr|length == 0 %}
   <div class='p-2'>
-    <p>{{ 'No favorite tags are present. Start adding one by clicking the + button below and type a tag.'|trans }}</p>
+    <p>{{ 'No favorite tags are present. Add an existing tag with the form below.'|trans }}</p>
   </div>
   {% endif %}
   <div class='d-flex flex-column'>
     {% for favtag in favTagsArr %}
     <div data-action='add-tag-filter' data-tag='{{ favtag.tag }}' class='side-panel-item {{ App.Request.query.all('tags')[0] == favtag.tag ? 'selected' : ''}}'>
-      {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags' hidden><i class='fas fa-trash-alt'></i></a>
+      {{ favtag.tag }}<a href='#' class='float-right mr-2' data-id='{{ favtag.tags_id }}' data-action='destroy-favtags'><i class='fas fa-trash-alt'></i></a>
     </div>
     {% endfor %}
   </div>
-  <hr>
-  <div class='m-2'>
-    <input type='text' id='createFavTagInput' data-autocomplete='tags' class='form-control createFavTagInput' placeholder='{{ 'Start typing a tag'|trans }}' hidden />
+  <div class='px-2'>
+    <hr>
   </div>
-  <a data-action='toggle-addfav' href='#' title='{{ 'Add a tag as favorite'|trans }}'>
-    <i class='m-2 fas fa-square-plus fa-2x'></i>
-  </a>
-  <a data-action='toggle-favtags-edit' href='#' title='{{ 'Edit list'|trans }}'>
-    <i class='m-2 fas fa-pencil-alt fa-2x'></i>
-  </a>
+  {# ADD TAG AS FAVORITE INPUT #}
+  <div class='input-group mt-2 mb-3 p-2'>
+    <input id='createFavTagInput' data-autocomplete='tags' type='text' class='form-control form-inline createFavTagInput' aria-label='{{ 'Add a tag as favorite'|trans }}' placeholder='{{ 'Add a tag as favorite'|trans }}'>
+    <div class='input-group-append'>
+      <button class='btn btn-primary' type='button' title='{{ 'Add'|trans }}' data-action='create-todoitem' aria-label='{{ 'Add'|trans }}'>
+        <i class='fas fa-plus fa-fw' title='{{ 'Add'|trans }}'></i>
+      </button>
+    </div>
+  </div>
 </div>
