add moving bird

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <p class='footer-left'>
-    <a title='{{ 'Follow eLabFTW on Twitter!'|trans }}' style='color:#343434' href='https://twitter.com/elabftw'>
+    <a title='{{ 'Follow eLabFTW on Twitter!'|trans }}' data-action='navigate-twitter' style='color:#343434' href='#'>
       <i title='Twitter' class='fab fa-twitter fa-lg'></i>
     </a>
 
