use medium as secondary color!

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 /* override bootstrap theme */
 $theme-colors: (
     'primary': $elabblue,
+    'secondary': $medium,
     'danger': $dangerred,
     'neutral': $medium,
 );
