change json editor color

--- a/src/scss/_jsoneditor.scss
+++ b/src/scss/_jsoneditor.scss
@@ -16,9 +16,9 @@
 
 .jsoneditor,
 .jsoneditor-menu {
-    border-color: $elabblue;
+    border-color: $medium;
 }
 
 .jsoneditor-menu {
-    background-color: $elabblue;
+    background-color: $medium;
 }
