--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -11,7 +11,7 @@
     <div class='d-flex align-items-center'>
       {# ADD FIELD #}
       <div class='mr-2'>
-        <div title='{{ 'Add field'|trans }}' data-action='toggle-modal' data-target='fieldBuilderModal' id='jsonEditorAddFieldButton' class='hl-hover-gray p-2 rounded'>
+        <div title='{{ 'Add field'|trans }}' data-action='toggle-modal' data-target='fieldBuilderModal' id='jsonEditorAddFieldButton' class='hl-hover-gray p-2 rounded main-action-button'>
           <i class='fas fa-plus fa-fw'></i>
         </div>
       </div>
